src/objects/C1ASCloudConnectorConfig__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Key__c</fullName>
        <label>Key</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value10__c</fullName>
        <label>Value10</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value2__c</fullName>
        <label>Value2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value3__c</fullName>
        <label>Value3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>C1ASCloudConnectorConfig</label>
</CustomObject>